action.yml, README.md: Clarify that lists are space-separated
Let's clarify in the description of relevant inputs that lists should be
space-separated. I haven't tried yet, but as I understand it we should
also be able to separate multiple entries with line breaks in the YAML
file, using the folded style operator (">").

Signed-off-by: Quentin Monnet <quentin@isovalent.com>

--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ branding:
 
 inputs:
   output-files:
-    description: 'Output file names, for example: "project.zip project.tar.gz"'
+    description: 'Output file names (space-separated list), for example: "project.zip project.tar.gz"'
     required: true
   base-repo:
     description: 'Main Git repository to archive, defaults to current path'
@@ -23,7 +23,7 @@ inputs:
     required: false
     default: true
   extra-includes:
-    description: 'Additional files to include in the archive'
+    description: 'Additional files to include in the archive (space-separated list)'
     required: false
   compression-level:
     description: 'Compression level; interpretation depends on output format'
